Restore docker-compose.yml and dist directory structure, re-adding previously removed files for services, controllers, and utilities.

--- a/.gitignore
+++ b/.gitignore
@@ -1,158 +1,4 @@
 node_modules
-docker-compose.yml
-dist/server.d.ts
-dist/server.d.ts.map
-dist/server.js
-dist/server.js.map
-dist/config/database.d.ts
-dist/config/database.d.ts.map
-dist/config/database.js
-dist/config/database.js.map
-dist/config/redis.d.ts
-dist/config/redis.d.ts.map
-dist/config/redis.js
-dist/config/redis.js.map
-dist/controllers/AuthController.d.ts
-dist/controllers/AuthController.d.ts.map
-dist/controllers/AuthController.js
-dist/controllers/AuthController.js.map
-dist/controllers/BudgetController.d.ts
-dist/controllers/BudgetController.d.ts.map
-dist/controllers/BudgetController.js
-dist/controllers/BudgetController.js.map
-dist/controllers/CategoryController.d.ts
-dist/controllers/CategoryController.d.ts.map
-dist/controllers/CategoryController.js
-dist/controllers/CategoryController.js.map
-dist/controllers/ChatController.d.ts
-dist/controllers/ChatController.d.ts.map
-dist/controllers/ChatController.js
-dist/controllers/ChatController.js.map
-dist/controllers/ReceiptController.d.ts
-dist/controllers/ReceiptController.d.ts.map
-dist/controllers/ReceiptController.js
-dist/controllers/ReceiptController.js.map
-dist/controllers/TransactionController.d.ts
-dist/controllers/TransactionController.d.ts.map
-dist/controllers/TransactionController.js
-dist/controllers/TransactionController.js.map
-dist/controllers/UserController.d.ts
-dist/controllers/UserController.d.ts.map
-dist/controllers/UserController.js
-dist/controllers/UserController.js.map
-dist/middleware/auth.d.ts
-dist/middleware/auth.d.ts.map
-dist/middleware/auth.js
-dist/middleware/auth.js.map
-dist/middleware/errorHandler.d.ts
-dist/middleware/errorHandler.d.ts.map
-dist/middleware/errorHandler.js
-dist/middleware/errorHandler.js.map
-dist/middleware/notFoundHandler.d.ts
-dist/middleware/notFoundHandler.d.ts.map
-dist/middleware/notFoundHandler.js
-dist/middleware/notFoundHandler.js.map
-dist/middleware/validate.d.ts
-dist/middleware/validate.d.ts.map
-dist/middleware/validate.js
-dist/middleware/validate.js.map
-dist/routes/authRoutes.d.ts
-dist/routes/authRoutes.d.ts.map
-dist/routes/authRoutes.js
-dist/routes/authRoutes.js.map
-dist/routes/budgetRoutes.d.ts
-dist/routes/budgetRoutes.d.ts.map
-dist/routes/budgetRoutes.js
-dist/routes/budgetRoutes.js.map
-dist/routes/categoryRoutes.d.ts
-dist/routes/categoryRoutes.d.ts.map
-dist/routes/categoryRoutes.js
-dist/routes/categoryRoutes.js.map
-dist/routes/chatRoutes.d.ts
-dist/routes/chatRoutes.d.ts.map
-dist/routes/chatRoutes.js
-dist/routes/chatRoutes.js.map
-dist/routes/receiptRoutes.d.ts
-dist/routes/receiptRoutes.d.ts.map
-dist/routes/receiptRoutes.js
-dist/routes/receiptRoutes.js.map
-dist/routes/transactionRoutes.d.ts
-dist/routes/transactionRoutes.d.ts.map
-dist/routes/transactionRoutes.js
-dist/routes/transactionRoutes.js.map
-dist/routes/userRoutes.d.ts
-dist/routes/userRoutes.d.ts.map
-dist/routes/userRoutes.js
-dist/routes/userRoutes.js.map
-dist/services/BudgetService.d.ts
-dist/services/BudgetService.d.ts.map
-dist/services/BudgetService.js
-dist/services/BudgetService.js.map
-dist/services/CategoryService.d.ts
-dist/services/CategoryService.d.ts.map
-dist/services/CategoryService.js
-dist/services/CategoryService.js.map
-dist/services/ChatService.d.ts
-dist/services/ChatService.d.ts.map
-dist/services/ChatService.js
-dist/services/ChatService.js.map
-dist/services/DeepSeekService.d.ts
-dist/services/DeepSeekService.d.ts.map
-dist/services/DeepSeekService.js
-dist/services/DeepSeekService.js.map
-dist/services/NotificationService.d.ts
-dist/services/NotificationService.d.ts.map
-dist/services/NotificationService.js
-dist/services/NotificationService.js.map
-dist/services/OCRService.d.ts
-dist/services/OCRService.d.ts.map
-dist/services/OCRService.js
-dist/services/OCRService.js.map
-dist/services/ReceiptProcessingService.d.ts
-dist/services/ReceiptProcessingService.d.ts.map
-dist/services/ReceiptProcessingService.js
-dist/services/ReceiptProcessingService.js.map
-dist/services/ToolService.d.ts
-dist/services/ToolService.d.ts.map
-dist/services/ToolService.js
-dist/services/ToolService.js.map
-dist/services/TransactionService.d.ts
-dist/services/TransactionService.d.ts.map
-dist/services/TransactionService.js
-dist/services/TransactionService.js.map
-dist/types/user.d.ts
-dist/types/user.d.ts.map
-dist/types/user.js
-dist/types/user.js.map
-dist/utils/jwt.d.ts
-dist/utils/jwt.d.ts.map
-dist/utils/jwt.js
-dist/utils/jwt.js.map
-dist/utils/logger.d.ts
-dist/utils/logger.d.ts.map
-dist/utils/logger.js
-dist/utils/logger.js.map
-dist/utils/password.d.ts
-dist/utils/password.d.ts.map
-dist/utils/password.js
-dist/utils/password.js.map
-dist/validators/authValidators.d.ts
-dist/validators/authValidators.d.ts.map
-dist/validators/authValidators.js
-dist/validators/authValidators.js.map
-dist/validators/budgetValidators.d.ts
-dist/validators/budgetValidators.d.ts.map
-dist/validators/budgetValidators.js
-dist/validators/budgetValidators.js.map
-dist/validators/chatValidators.d.ts
-dist/validators/chatValidators.d.ts.map
-dist/validators/chatValidators.js
-dist/validators/chatValidators.js.map
-dist/validators/transactionValidators.d.ts
-dist/validators/transactionValidators.d.ts.map
-dist/validators/transactionValidators.js
-dist/validators/transactionValidators.js.map
-dist/validators/userValidators.d.ts
-dist/validators/userValidators.d.ts.map
-dist/validators/userValidators.js
-dist/validators/userValidators.js.map
+docker-compose.yml 
+dist/
+
